--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-<header>header121</header>
+<header>headew</header>
 <div class="swiper-container">
     <div class="swiper-wrapper">
-        <div class="swiper-slide">Slide 1</div>
+        <div class="swiper-slide">Slide 12</div>
         <div class="swiper-slide">Slide 2</div>
         <div class="swiper-slide">Slide 3</div>
     </div>
